# combocurve-api-helper

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
config-examples/: cc-api.config.example.json  combocurve.example.json
docs/: econ-models-deferred-refactors.md
docs/superpowers/plans/: 2026-06-23-econ-model-method-codegen.md  2026-07-09-econ-model-csv-mapping.md  2026-07-22-econ-model-csv-file-layer.md
docs/superpowers/specs/: 2026-06-22-econ-model-method-codegen-design.md  2026-07-08-econ-model-csv-mapping-design.md  2026-07-22-econ-model-csv-file-layer-design.md
scripts/: audit_econ_model_drift.py  codegen.ps1  codegen.sh  generate_csv_functions.py  generate_docstrings.py  generate_model_methods.py  test.bat  test.ps1  test.sh
src/combocurve_api_helper/: __init__.py  _batch.py  _econ_model_base.py  _models_generated.py  base.py  company_models.py  config.py  directional.py  econ_runs.py  exports.py  forecast_configurations.py  forecasts.py  models.py  ownership_qualifiers.py  production.py  projects.py  root.py  scenarios.py  test_api.py  test_assignment_write_generics.py  test_assignments_live.py  test_batch_write.py  test_docstrings_current.py  test_econ_models_config.py  test_generated_models.py  test_scenario_assignments.py  typecurves.py  wells.py
src/combocurve_api_helper/assets/: econModelTypes.json  econModels.json  ref_wells.json
src/combocurve_api_helper/econ_models/: __init__.py  _csv_generated.py  actual_or_forecast.py  base.py  capex.py  csv_columns.py  date_settings.py  differentials.py  drift.py  enums.py  expenses.py  formats.py  ownership_reversion.py  pricing.py  production_taxes.py  registry.py  reserves_category.py  risking.py  stream_properties.py  test_actual_or_forecast.py  test_base.py  test_capex.py  test_csv_generated.py  test_date_settings.py  test_drift.py  test_enums_formats.py  test_expenses.py  test_fixtures.py  test_ownership_reversion.py  test_pricing.py  test_production_taxes.py  test_reserves_category.py  test_risking.py  test_stream_properties.py
src/combocurve_api_helper/econ_models/fixtures/: actual_or_forecast.csv  capex.csv  date_settings.csv  differentials.csv  expenses.csv  ownership_reversion.csv  pricing.csv  production_taxes.csv  production_taxes_state.csv  reserves_category.csv  risking.csv  stream_properties.csv
test/: test.bat  test.sh
tests/: __init__.py  test_assignment_write_generics.py  test_batch_write.py  test_docstring_slugs.py  test_docstrings_current.py  test_econ_runs.py  test_exports.py  test_generated_models.py
tests/econ_models/: __init__.py  csv_fixture_io.py  test_actual_or_forecast.py  test_capex.py  test_csv_file_io.py  test_csv_generated.py  test_date_settings.py  test_differentials.py  test_drift.py  test_enums_formats.py  test_expenses.py  test_fixtures.py  test_ownership_reversion.py  test_pricing.py  test_production_taxes.py  test_reserves_category.py  test_risking.py  test_stream_properties.py
tests/econ_models/fixtures/: capex.csv  expenses.csv  ownership_reversion.csv  pricing.csv  production_taxes_state.csv  reserves_category.csv  risking.csv
