[build-system]
requires = [
    'setuptools',
    'wheel',
]
build-backend = 'setuptools.build_meta'


[project]
name = 'combocurve-api-helper'
dynamic = ['version']
description = "A library mapped to ComboCurve's API."
authors = [
    {name = 'David S. Fulford'},
]
maintainers = [
    {name = 'David S. Fulford'},
]
readme = {file = 'README.md', content-type = 'text/markdown'}
license = {file = 'LICENSE'}
requires-python = '>=3.8'
dependencies = [
    'combocurve-api-v1',
    'more-itertools',
    'requests',
    'typing-extensions',
]
keywords = [
    'combocurve-api-helper', 'combocurve', 'cc', 'api'
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed'
]


[project.optional-dependencies]
dev = [
    'flake8>=6.1.0',
    'flake8-pyproject>=1.2.3',
    'mypy>=1.7.0',
]


[tool.setuptools.dynamic]
version = {attr = "combocurve_api_helper.__version__"}


[tool.setuptools.packages.find]
where = ['src']


[project.urls]
Homepage = "https://github.com/petbox-dev/combocurve-api-helper.git"
Repository = "https://github.com/petbox-dev/combocurve-api-helper.git"
Issues = "https://github.com/petbox-dev/combocurve-api-helper/issues"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "src",
]


[tool.flake8]
max-line-length = 120
ignore = [
    'F401',
    'F841',
    'E116',
    'E123',
    'E128',
    'E251',
    'E261',
    'E265',
    'E266',
    'E302',
    'E303',
    'E305',
    'E402',
    'E722',
    'E741',
    'W503',
    'W605'
]
exclude = [
    '.git',
    '__pycache__',
    'docs/conf.py',
    'docs/source/conf.py',
    'old',
    'build',
    'dist'
]
max-complexity = 20


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
# ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
