[build-system]
requires = [
    'setuptools',
    'wheel',
]
build-backend = 'setuptools.build_meta'


[project]
name = 'combocurve-api-helper'
dynamic = ['version']
description = "A library mapped to ComboCurve's API."
authors = [
    {name = 'David S. Fulford'},
]
maintainers = [
    {name = 'David S. Fulford'},
]
readme = {file = 'README.md', content-type = 'text/markdown'}
license = {file = 'LICENSE'}
requires-python = '>=3.8'
dependencies = [
    'combocurve-api-v1',
    'more-itertools',
    'pydantic>=2,<3',
    'requests',
    'typing-extensions',
]
keywords = [
    'combocurve-api-helper', 'combocurve', 'cc', 'api'
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed'
]


# Optional dependencies specified in pyproject.toml should be only for end-user runtime installation behavior
# and they are not intended for build/development time for the developer. instead this is the responsibility
# of the build tool itself, or should be manually provided.
# For dev dependencies required by developers working on the project we define: [dependency-groups]

[dependency-groups]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.15",
    "types-requests>=2.32.0.20241016",
]


[tool.setuptools.dynamic]
version = {attr = "combocurve_api_helper.__version__"}


[tool.setuptools.packages.find]
where = ['src']


[tool.setuptools.package-data]
combocurve_api_helper = ['**/*']

# `package-data = ['**/*']` would otherwise sweep in compiled bytecode
# (`__pycache__/*.pyc`) -- stale caches that bloat the sdist/wheel and can carry
# pre-edit source content. Exclude them so builds ship only real source + data.
[tool.setuptools.exclude-package-data]
combocurve_api_helper = ['**/__pycache__/*', '**/*.pyc', '**/*.pyo']


[project.urls]
Homepage = "https://github.com/petbox-dev/combocurve-api-helper.git"
Repository = "https://github.com/petbox-dev/combocurve-api-helper.git"
Issues = "https://github.com/petbox-dev/combocurve-api-helper/issues"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]


[tool.ruff]
line-length = 120
extend-exclude = [
    # Codegen output owned by scripts/generate_model_methods.py and byte-compared
    # by the freshness test -- the formatter must not touch it, or the test breaks.
    '_models_generated.py',
    # Codegen output owned by scripts/generate_csv_functions.py, likewise byte-compared.
    '_csv_generated.py',
]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
# Mirrors the previous flake8 policy: pyflakes (F) + pycodestyle (E/W) + mccabe (C90),
# minus the rules this project has always ignored. Layout rules (blank lines,
# continuation indents) are now owned by `ruff format`.
select = [
    'E',
    'F',
    'W',
    'C90',
]
ignore = [
    'E402',  # module-level import not at top of file
    'E722',  # bare except
    'E741',  # ambiguous variable name (l, I, O)
    'E265',  # block comment should start with '# ' (banner comments use ######)
    'E266',  # too many leading '#' for block comment
    'F401',  # imported but unused (re-export modules)
    'F841',  # local variable assigned but never used
    'W605',  # invalid escape sequence
]

[tool.ruff.lint.mccabe]
max-complexity = 20


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
# ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


# The upstream combocurve-api-v1 package ships no py.typed marker / stubs.
# Scope the missing-imports allowance to it rather than enabling it globally.
[[tool.mypy.overrides]]
module = [
    'combocurve_api_v1',
    'combocurve_api_v1.*',
]
ignore_missing_imports = true
